got storybook working

--- a/app/ui-toolkit/hooks/useInterval.stories.mdx
+++ b/app/ui-toolkit/hooks/useInterval.stories.mdx
@@ -1,6 +1,5 @@
 import { Meta, Story, Canvas } from "@storybook/addon-docs";
-import { SourceCodeLink } from "../../components/SourceCodeLink";
-import { PropsTable } from "../../components/PropsTable";
+import { PropsTable, SourceCodeLink } from "../components/_storybook";
 
 <Meta title="Hooks/useInterval" />
 
@@ -18,7 +17,7 @@ useInterval(() => {
 ## Import
 
 ```tsx
-import { useInterval } from "~ui-toolkit/hooks/useInterval";
+import { useInterval } from "~/ui-toolkit/hooks/useInterval";
 ```
 
 ## Params
