--- a/app/ui-toolkit/hooks/usePaging.stories.mdx
+++ b/app/ui-toolkit/hooks/usePaging.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Story, Canvas } from "@storybook/addon-docs";
-import { PropsTable, SourceCodeLink } from "../docs";
+import { PropsTable, SourceCodeLink } from "../components/_storybook";
 
 <Meta title="Hooks/usePaging" />
 
@@ -18,7 +18,7 @@ let { currentPage, goForward, goBack, goTo } = usePaging(items.length);
 ### Import
 
 ```tsx
-import { usePaging } from "~ui-toolkit/hooks/usePaging";
+import { usePaging } from "~/ui-toolkit/hooks/usePaging";
 ```
 
 ## Params
