--- a/app/ui-toolkit/utils/querystring.stories.mdx
+++ b/app/ui-toolkit/utils/querystring.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Story, Canvas } from "@storybook/addon-docs";
-import { SourceCodeLink } from "../../components/SourceCodeLink";
+import { PropsTable, SourceCodeLink } from "../components/_storybook";
 
 <Meta title="Utils/querystring" />
 
@@ -12,7 +12,7 @@ Helpers for translating a querystring back and forth between and object and a st
 ## Import
 
 ```js
-import { querystring } from "~ui-toolkit/utils/querystring";
+import { querystring } from "~/ui-toolkit/utils/querystring";
 ```
 
 ## Usage
