--- a/app/ui-toolkit/hooks/useDebounce.stories.mdx
+++ b/app/ui-toolkit/hooks/useDebounce.stories.mdx
@@ -1,6 +1,5 @@
 import { Meta, Story, Canvas } from "@storybook/addon-docs";
-import { SourceCodeLink } from "../../components/SourceCodeLink";
-import { PropsTable } from "../../components/PropsTable";
+import { PropsTable, SourceCodeLink } from "../components/_storybook";
 
 <Meta title="Hooks/useDebounce" />
 
@@ -31,7 +30,7 @@ function SearchBox({ onChange, defaultValue = "" }) {
 ### Import
 
 ```tsx
-import { useDebouncedEffect } from "~ui-toolkit/hooks/useDebounce";
+import { useDebouncedEffect } from "~/ui-toolkit/hooks/useDebounce";
 ```
 
 ### Params
@@ -78,7 +77,7 @@ function SearchBox({ onChange, defaultValue = "" }) {
 ### Import
 
 ```tsx
-import { useDebouncedValue } from "~ui-toolkit/hooks/useDebounce";
+import { useDebouncedValue } from "~/ui-toolkit/hooks/useDebounce";
 ```
 
 ### Params
