--- a/app/ui-toolkit/hooks/useSorting.stories.mdx
+++ b/app/ui-toolkit/hooks/useSorting.stories.mdx
@@ -1,7 +1,4 @@
-import { Meta, Story, Canvas } from "@storybook/addon-docs";
 import { PropsTable, SourceCodeLink } from "../components/_storybook";
-
-<Meta title="Hooks/useSorting" />
 
 # useSorting
 
@@ -43,8 +40,7 @@ import { useSorting } from "~/ui-toolkit/hooks/useSorting";
     {
       name: "sortMethod",
       type: `function`,
-      description:
-        "The sort method to use if complex sorting logic is required.",
+      description: "The sort method to use if complex sorting logic is required.",
       isRequired: "Optional",
     },
   ]}
